--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.16.4",
+    "mobile-detect": "^1.4.3",
     "socket.io": "2.2.0"
   }
 }
